Issue #1110 - Three column gallery; fix cta spacing

--- a/assets/scss/organisms/photo/_three-column-gallery.scss
+++ b/assets/scss/organisms/photo/_three-column-gallery.scss
@@ -63,6 +63,14 @@
         @include breakpoint(small only) {
             padding: 0;
         }
+
+        .cta {
+            margin-top: 73px;
+
+            @include breakpoint(small only) {
+                margin-top: 58px;
+            }
+        }
     }
 
     .photo-details-overlay:first-of-type {
